# rsi-bot

./: .dockerignore  README.md  dockerfile  main.py  pyproject.toml
.github/woorkflows/: deploy.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 02ccfbe7dabf_initial_schema.py  5edf796c041d_user_symbol_string_instead_of_fk.py  a5d363a74f27_fix_user_symbols_id_autoincrement.py  daa77c3f9ed2_add_dual_rsi_thresholds_and_alert_type.py  e6a55eadc79f_fix_user_symbols_id_autoincrement.py  fix_user_symbols_sequence.py
app/binance/: client.py  websocket.py
app/bot/: __init__.py  handlers.py  monitor.py
app/db/: base.py  session.py
app/db/models/: __init__.py  alert.py  settings.py  symbol.py  user.py  user_symbol.py
app/db/queries/: user_crud.py
app/indicators/: rsi.py
app/utils/: constants.py
